# AsepriteRenderHook

./: .gitignore  CMakeLists.txt  README.md
AsepriteRenderHook/: AsepriteRenderHook.cpp  AsepriteRenderHook.h  CMakeLists.txt  DemoWindow.cpp  DemoWindow.h  MainWindow.cpp  MainWindow.h  PointLightController.cpp  PointLightController.h  SpriteController.cpp  SpriteController.h  Websocket.cpp  Websocket.h  Window.cpp  Window.h  main.cpp
Client/: SocketClient.lua
Engine/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  ElementManager.cpp  ElementManager.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityDeprecated.cpp  EntityDeprecated.h  FrameInfo.h  InterfaceElement.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h  Wrengine.h
Engine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h
Engine/shaders/: simple_shader.frag  simple_shader.vert
